<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/ly2"
        android:background="@color/blue"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/img_uzmobile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/uzmobile_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="12dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/img_uzmobile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.viewpager2.widget.ViewPager2
            app:layout_constraintVertical_bias="0.45"
            android:id="@+id/view_pager"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>


        <me.relex.circleindicator.CircleIndicator3
            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.92"
        android:layout_width="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_height="300dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_hash"
                        android:gravity="center"
                        android:backgroundTint="#3301B4FF"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_hash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/ussd_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:backgroundTint="#3301B4FF"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_status"
                        android:gravity="center"

                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_credit_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/status_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:backgroundTint="#3301B4FF"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_service"
                        android:gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_sliders"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/service_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:paddingBottom="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:backgroundTint="#3301B4FF"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_phone"
                        android:gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_phone_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/min_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:backgroundTint="#3301B4FF"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_internet"
                        android:gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_internet_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/net_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="10dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        app:cardElevation="0dp"
                        app:cardCornerRadius="30dp"
                        android:backgroundTint="#3301B4FF"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:id="@+id/item_sms"
                        android:gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_sms_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:textColor="#4C4F51"
                        android:layout_marginTop="10dp"
                        android:text="@string/sms_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>