<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/banner_fragment"
    tools:context=".fragments.BannerFragment">

    <LinearLayout
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="300dp">
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_ly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/banner_fragment_bacground"
        android:layout_width="match_parent"
        android:layout_height="490dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/banner"
        android:padding="10dp"
        android:background="@drawable/status_background"
        app:layout_constraintTop_toTopOf="@id/cons_ly"
        app:layout_constraintBottom_toTopOf="@id/cons_ly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:text="Просто 10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/name_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginVertical="@dimen/_5sdp"
            android:gravity="center"
            android:id="@+id/container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/price_1"
            app:layout_constraintTop_toBottomOf="@id/name_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/min"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/status_item_background"
                    android:gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp">

                    <ImageView
                        android:src="@drawable/ic_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/min_txt"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/yellow"
                    android:text="10 MIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/mb"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/status_item_background"
                    android:gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp">

                    <ImageView
                        android:src="@drawable/ic_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/net_txt"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/yellow"
                    android:text="10 MB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/sms"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/status_item_background"
                    android:gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp">

                    <ImageView
                        android:src="@drawable/ic_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/sms_txt"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/yellow"
                    android:text="10 SMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>



        <TextView
            android:id="@+id/price_1"
            android:textColor="@color/blue"
            android:text="10 000  bir oy uchun"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="4dp"
        android:id="@+id/back"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/blue"
        android:layout_width="40dp"
        android:layout_height="40dp">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_arrow_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/action_bar_txt"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textSize="@dimen/_16sdp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintLeft_toRightOf="@id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/status_name_2"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_11sdp"
        android:textColor="#2E2E2E"
        android:text="@string/pay_price"
        app:layout_constraintTop_toBottomOf="@id/status_name_2"
        app:layout_constraintLeft_toLeftOf="@id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="10 000 so'm"
        android:textColor="#2E2E2E"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintRight_toRightOf="@id/banner"
        app:layout_constraintTop_toBottomOf="@id/status_name_2" />

    <LinearLayout
        android:id="@+id/line"
        android:alpha="0.5"
        android:layout_marginTop="10dp"
        android:background="#9C9C9C"
        app:layout_constraintTop_toBottomOf="@id/price_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal" />

    <ScrollView
        android:id="@+id/scroll_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:maxLines="12"
                android:alpha="0.8"
                android:textSize="@dimen/_12sdp"
                android:textColor="#8C8A8A"
                android:id="@+id/info"
                android:text="Tarif rejasi  jismoniy va yuridik shaxslar uchun, 2019-yil  1-fеvraldan 30-iyunga qadar taqdim etiladi.
Kiritilgan daqiqa limiti, MB, SMS 1 kalеndar oyiga taqdim etiladi.
Tarif rejasiga «O‘zbеktеlеkom» AK sotuvlar ofisi, shuningdek, dilеrlar orqali ulanish mumkin.
Abonеnt to‘lovini hisoblash abonеnt faol bo‘lganida amalga oshiriladi.  Agar abonеnt hisobida pul mablag‘i yetarli bo‘lmaganligi sababli abonеnt bloklangan bo‘lsa, to‘lov kiritilmaguniga qadar to‘lov hisoblanmaydi.
 Ushbu tarif rejasiga ulanish yoki unga o‘tishda abonent to‘lovi kalendar oyidagi qolgan kunlar soniga nisbatan, kiritilgan daqiqalar, SMS va Internet trafigi, shuningdek, qolgan kunlar soni bo‘yicha (to‘liq daqiqaga yaxlitlangan holda) hisoblab chiqiladi."
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/btn_more"
        android:gravity="center"
        android:background="@drawable/btn2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_width="140dp"
        android:layout_height="30dp">
        <TextView
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="#505050"
            android:text="@string/more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/btn_accept"
        android:gravity="center"
        android:background="@drawable/btn1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_width="140dp"
        android:layout_height="30dp">
        <TextView
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>